--- a/index.html
+++ b/index.html
@@ -37,8 +37,22 @@
 				</nav>
 				<!--Contacts-->
 				<ul class="contacts-list">
-					<li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-					<li class="item"><a class="link" href="tel:+380961111111">+38 (096) 111 11 11</a></li>
+					<li class="item">
+						<a class="link" href="mailto:info@devstudio.com">
+							<svg class="icon" width="16" height="12">
+								<use href="./img/icon/all-icon/icon.svg#icon-envelope"></use>
+							</svg>
+							info@devstudio.com
+						</a>
+					</li>
+					<li class="item">
+						<a class="link" href="tel:+380961111111">
+							<svg class="icon" width="10" height="16">
+								<use href="./img/icon/all-icon/icon.svg#icon-smartphone"></use>
+							</svg>
+							+38 (096) 111 11 11
+						</a>
+					</li>
 				</ul>
 			</div>
 		</header>
@@ -58,31 +72,50 @@
 			</section>
 
 			<!--Section features-->
-			<section class="section-features">
+			<section class="features">
 				<div class="container">
 					<h2 class="title-h2 visually-hidden">Достоинства</h2>
 					<!--1.Point-->
 					<ul class="list">
 						<li class="item">
+							<div class="features-icon">
+								<svg class="icon" width="70" height="70">
+									<use href="./img/icon/all-icon/icon.svg#icon-antenna"></use>
+								</svg>
+							</div>
 							<h3 class="title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
 							<p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
 						</li>
 
 						<!--2.Point-->
 						<li class="item">
+							<div class="features-icon">
+								<svg class="icon" width="70" height="70">
+									<use href="./img/icon/all-icon/icon.svg#icon-clock"></use>
+								</svg>
+							</div>
 							<h3 class="title">ПУНКТУАЛЬНОСТЬ</h3>
-
 							<p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
 						</li>
 
 						<!--3.Point-->
 						<li class="item">
+							<div class="features-icon">
+								<svg class="icon" width="70" height="70">
+									<use href="./img/icon/all-icon/icon.svg#icon-diagram"></use>
+								</svg>
+							</div>
 							<h3 class="title">ПЛАНИРОВАНИЕ</h3>
 							<p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
 						</li>
 
 						<!--4.Point-->
 						<li class="item">
+							<div class="features-icon">
+								<svg class="icon" width="70" height="70">
+									<use href="./img/icon/all-icon/icon.svg#icon-astronaut"></use>
+								</svg>
+							</div>
 							<h3 class="title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
 							<p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
 						</li>
@@ -91,7 +124,7 @@
 			</section>
 
 			<!--Speciality-->
-			<section class="section-special">
+			<section class="section special">
 				<div class="container">
 					<h2 class="title">Чем мы занимаемся</h2>
 					<ul class="list">
@@ -109,37 +142,326 @@
 			</section>
 
 			<!--Our Team-->
-			<section class="section-team">
+			<section class="section team">
 				<div class="container">
 					<h2 class="title">Наша команда</h2>
-					<ul class="list">
-						<li class="item">
-							<img class="photo" src="./img/our-teams/Igor.jpg" alt="Игорь Демьяненко" width="270" height="260" />
+					<ul class="team-list">
+						<li class="person item">
 							<div class="person-card">
+								<img class="photo" src="./img/our-teams/Igor.jpg" alt="Игорь Демьяненко" width="270" height="260" />
 								<h3 class="name">Игорь Демьяненко</h3>
 								<p class="text" lang="en">Product Designer</p>
 							</div>
+							<div class="team-icon">
+								<ul class="list">
+									<li class="team-icon item">
+										<a
+											href="https://www.instagram.com/"
+											class="team-icon link"
+											target="_blank"
+											rel="noopener noreferrer"
+											lang="en"
+											aria-label="Instagram"
+										>
+											<svg class="icon" width="20" height="20">
+												<use href="./img/icon/all-icon/icon.svg#icon-instagram-T"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="item">
+										<a
+											href="https://twitter.com/?lang=ru"
+											class="link"
+											target="_blank"
+											rel="noopener noreferrer"
+											lang="en"
+											aria-label="Twitter"
+										>
+											<svg class="icon" width="20" height="20">
+												<use href="./img/icon/all-icon/icon.svg#icon-twitter-T"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="item">
+										<a
+											href="https://www.facebook.com/"
+											class="link"
+											target="_blank"
+											rel="noopener noreferrer"
+											lang="en"
+											aria-label="Facebook"
+										>
+											<svg class="icon" width="20" height="20">
+												<use href="./img/icon/all-icon/icon.svg#icon-facebook-T"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="item">
+										<a
+											href="https://www.linkedin.com/"
+											class="link"
+											target="_blank"
+											rel="noopener noreferrer"
+											lang="en"
+											aria-label="linkedIn"
+										>
+											<svg class="icon" width="20" height="20">
+												<use href="./img/icon/all-icon/icon.svg#icon-linkedin-T"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
+							</div>
 						</li>
-						<li class="item">
-							<img class="photo" src="./img/our-teams/Olha.jpg" alt="Ольга Репина" width="270" height="260" />
+						<li class="person item">
 							<div class="person-card">
+								<img class="photo" src="./img/our-teams/Olha.jpg" alt="Ольга Репина" width="270" height="260" />
 								<h3 class="name">Ольга Репина</h3>
 								<p class="text" lang="en">Frontend Developer</p>
 							</div>
+							<div class="team-icon">
+								<ul class="list">
+									<li class="team-icon item">
+										<a
+											href="https://www.instagram.com/"
+											class="team-icon link"
+											target="_blank"
+											rel="noopener noreferrer"
+											lang="en"
+											aria-label="Instagram"
+										>
+											<svg class="icon" width="20" height="20">
+												<use href="./img/icon/all-icon/icon.svg#icon-instagram-T"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="item">
+										<a
+											href="https://twitter.com/?lang=ru"
+											class="link"
+											target="_blank"
+											rel="noopener noreferrer"
+											lang="en"
+											aria-label="Twitter"
+										>
+											<svg class="icon" width="20" height="20">
+												<use href="./img/icon/all-icon/icon.svg#icon-twitter-T"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="item">
+										<a
+											href="https://www.facebook.com/"
+											class="link"
+											target="_blank"
+											rel="noopener noreferrer"
+											lang="en"
+											aria-label="Facebook"
+										>
+											<svg class="icon" width="20" height="20">
+												<use href="./img/icon/all-icon/icon.svg#icon-facebook-T"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="item">
+										<a
+											href="https://www.linkedin.com/"
+											class="link"
+											target="_blank"
+											rel="noopener noreferrer"
+											lang="en"
+											aria-label="linkedIn"
+										>
+											<svg class="icon" width="20" height="20">
+												<use href="./img/icon/all-icon/icon.svg#icon-linkedin-T"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
+							</div>
 						</li>
-						<li class="item">
-							<img class="photo" src="./img/our-teams/Nikolay.jpg" alt="Николай Тарасов" width="270" height="260" />
+						<li class="person item">
 							<div class="person-card">
+								<img class="photo" src="./img/our-teams/Nikolay.jpg" alt="Николай Тарасов" width="270" height="260" />
 								<h3 class="name">Николай Тарасов</h3>
 								<p class="text" lang="en">Marketing</p>
 							</div>
+							<div class="team-icon">
+								<ul class="list">
+									<li class="team-icon item">
+										<a
+											href="https://www.instagram.com/"
+											class="team-icon link"
+											target="_blank"
+											rel="noopener noreferrer"
+											lang="en"
+											aria-label="Instagram"
+										>
+											<svg class="icon" width="20" height="20">
+												<use href="./img/icon/all-icon/icon.svg#icon-instagram-T"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="item">
+										<a
+											href="https://twitter.com/?lang=ru"
+											class="link"
+											target="_blank"
+											rel="noopener noreferrer"
+											lang="en"
+											aria-label="Twitter"
+										>
+											<svg class="icon" width="20" height="20">
+												<use href="./img/icon/all-icon/icon.svg#icon-twitter-T"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="item">
+										<a
+											href="https://www.facebook.com/"
+											class="link"
+											target="_blank"
+											rel="noopener noreferrer"
+											lang="en"
+											aria-label="Facebook"
+										>
+											<svg class="icon" width="20" height="20">
+												<use href="./img/icon/all-icon/icon.svg#icon-facebook-T"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="item">
+										<a
+											href="https://www.linkedin.com/"
+											class="link"
+											target="_blank"
+											rel="noopener noreferrer"
+											lang="en"
+											aria-label="linkedIn"
+										>
+											<svg class="icon" width="20" height="20">
+												<use href="./img/icon/all-icon/icon.svg#icon-linkedin-T"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
+							</div>
 						</li>
-						<li class="item">
-							<img class="photo" src="./img/our-teams/Miha.jpg" alt="Михаил Ермаков" width="270" height="260" />
+						<li class="person item">
 							<div class="person-card">
+								<img class="photo" src="./img/our-teams/Miha.jpg" alt="Михаил Ермаков" width="270" height="260" />
 								<h3 class="name">Михаил Ермаков</h3>
 								<p class="text" lang="en">UI Designer</p>
 							</div>
+							<div class="team-icon">
+								<ul class="list">
+									<li class="team-icon item">
+										<a
+											href="https://www.instagram.com/"
+											class="team-icon link"
+											target="_blank"
+											rel="noopener noreferrer"
+											lang="en"
+											aria-label="Instagram"
+										>
+											<svg class="icon" width="20" height="20">
+												<use href="./img/icon/all-icon/icon.svg#icon-instagram-T"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="item">
+										<a
+											href="https://twitter.com/?lang=ru"
+											class="link"
+											target="_blank"
+											rel="noopener noreferrer"
+											lang="en"
+											aria-label="Twitter"
+										>
+											<svg class="icon" width="20" height="20">
+												<use href="./img/icon/all-icon/icon.svg#icon-twitter-T"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="item">
+										<a
+											href="https://www.facebook.com/"
+											class="link"
+											target="_blank"
+											rel="noopener noreferrer"
+											lang="en"
+											aria-label="Facebook"
+										>
+											<svg class="icon" width="20" height="20">
+												<use href="./img/icon/all-icon/icon.svg#icon-facebook-T"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="item">
+										<a
+											href="https://www.linkedin.com/"
+											class="link"
+											target="_blank"
+											rel="noopener noreferrer"
+											lang="en"
+											aria-label="linkedIn"
+										>
+											<svg class="icon" width="20" height="20">
+												<use href="./img/icon/all-icon/icon.svg#icon-linkedin-T"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</section>
+			<section class="section client">
+				<div class="container">
+					<h2 class="title">Постоянные клиенты</h2>
+					<ul class="list">
+						<li class="item">
+							<a class="link" href="" target="_blank" rel="noopener noreferrer" lang="en" aria-label="Client1">
+								<svg class="icon" width="106" height="60">
+									<use href="./img/icon/all-icon/icon.svg#icon-company1"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="item">
+							<a class="link" href="" target="_blank" rel="noopener noreferrer" lang="en" aria-label="Client2">
+								<svg class="icon" width="106" height="60">
+									<use href="./img/icon/all-icon/icon.svg#icon-company2"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="item">
+							<a class="link" href="" target="_blank" rel="noopener noreferrer" lang="en" aria-label="Client3">
+								<svg class="icon" width="106" height="60">
+									<use href="./img/icon/all-icon/icon.svg#icon-company3"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="item">
+							<a class="link" href="" target="_blank" rel="noopener noreferrer" lang="en" aria-label="Client4">
+								<svg class="icon" width="106" height="60">
+									<use href="./img/icon/all-icon/icon.svg#icon-company4"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="item">
+							<a class="link" href="" target="_blank" rel="noopener noreferrer" lang="en" aria-label="Client5">
+								<svg class="icon" width="106" height="60">
+									<use href="./img/icon/all-icon/icon.svg#icon-company5"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="item">
+							<a class="link" href="" target="_blank" rel="noopener noreferrer" lang="en" aria-label="Client6">
+								<svg class="icon" width="106" height="60">
+									<use href="./img/icon/all-icon/icon.svg#icon-company6"></use>
+								</svg>
+							</a>
 						</li>
 					</ul>
 				</div>
@@ -148,15 +470,50 @@
 
 		<footer class="footer">
 			<div class="container">
-				<a class="logo" href="./index.html">
-					<span class="web">Web</span>
-					<span class="studio">Studio</span>
-				</a>
-				<address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-				<ul class="list">
-					<li class="item"><a class="link" href="mailto:info@example.com">info@example.com</a></li>
-					<li class="item"><a class="link" href="tel:+380991111111">+38 (099) 111 11 11</a></li>
-				</ul>
+				<div class="footer-group">
+					<a class="logo" href="./index.html">
+						<span class="web">Web</span>
+						<span class="studio">Studio</span>
+					</a>
+					<address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+					<ul class="list">
+						<li class="item"><a class="link" href="mailto:info@example.com">info@example.com</a></li>
+						<li class="item"><a class="link" href="tel:+380991111111">+38 (099) 111 11 11</a></li>
+					</ul>
+				</div>
+				<div class="social">
+					<h2 class="social-title">присоединяйтесь</h2>
+					<ul class="list">
+						<li class="item">
+							<a href="https://www.instagram.com/" class="link">
+								<svg class="icon" width="20" height="20">
+									<use href="./img/icon/all-icon/icon.svg#icon-instagram-F"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="item">
+							<a href="https://twitter.com/?lang=ru" class="link" width="20" height="20">
+								<svg class="icon">
+									<use href="./img/icon/all-icon/icon.svg#icon-twitter-F"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="item">
+							<a href="https://www.facebook.com/" class="link" width="20" height="20">
+								<svg class="icon">
+									<use href="./img/icon/all-icon/icon.svg#icon-facebook-F"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="item">
+							<a href="https://www.linkedin.com/" class="link" width="20" height="20">
+								<svg class="icon">
+									<use href="./img/icon/all-icon/icon.svg#icon-linkedin-F"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</footer>
 	</body>
