--- a/portfolio.html
+++ b/portfolio.html
@@ -37,8 +37,22 @@
 				</nav>
 				<!--Contacts-->
 				<ul class="contacts-list">
-					<li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-					<li class="item"><a class="link" href="tel:+380961111111">+38 (096) 111 11 11</a></li>
+					<li class="item">
+						<a class="link" href="mailto:info@devstudio.com">
+							<svg class="icon" width="16" height="12">
+								<use href="./img/icon/all-icon/icon.svg#icon-envelope"></use>
+							</svg>
+							info@devstudio.com
+						</a>
+					</li>
+					<li class="item">
+						<a class="link" href="tel:+380961111111">
+							<svg class="icon" width="10" height="16">
+								<use href="./img/icon/all-icon/icon.svg#icon-smartphone"></use>
+							</svg>
+							+38 (096) 111 11 11
+						</a>
+					</li>
 				</ul>
 			</div>
 		</header>
@@ -156,15 +170,50 @@
 
 		<footer class="footer">
 			<div class="container">
-				<a class="logo" href="./index.html">
-					<span class="web">Web</span>
-					<span class="studio">Studio</span>
-				</a>
-				<address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-				<ul class="list">
-					<li class="item"><a class="link" href="mailto:info@example.com">info@example.com</a></li>
-					<li class="item"><a class="link" href="tel:+380991111111">+38 (099) 111 11 11</a></li>
-				</ul>
+				<div class="footer-group">
+					<a class="logo" href="./index.html">
+						<span class="web">Web</span>
+						<span class="studio">Studio</span>
+					</a>
+					<address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+					<ul class="list">
+						<li class="item"><a class="link" href="mailto:info@example.com">info@example.com</a></li>
+						<li class="item"><a class="link" href="tel:+380991111111">+38 (099) 111 11 11</a></li>
+					</ul>
+				</div>
+				<div class="social">
+					<h2 class="social-title">присоединяйтесь</h2>
+					<ul class="list">
+						<li class="item">
+							<a href="https://www.instagram.com/" class="link">
+								<svg class="icon" width="20" height="20">
+									<use href="./img/icon/all-icon/icon.svg#icon-instagram-F"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="item">
+							<a href="https://twitter.com/?lang=ru" class="link" width="20" height="20">
+								<svg class="icon">
+									<use href="./img/icon/all-icon/icon.svg#icon-twitter-F"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="item">
+							<a href="https://www.facebook.com/" class="link" width="20" height="20">
+								<svg class="icon">
+									<use href="./img/icon/all-icon/icon.svg#icon-facebook-F"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="item">
+							<a href="https://www.linkedin.com/" class="link" width="20" height="20">
+								<svg class="icon">
+									<use href="./img/icon/all-icon/icon.svg#icon-linkedin-F"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</footer>
 	</body>
