--- a/index.html
+++ b/index.html
@@ -147,12 +147,10 @@
 					<h2 class="title">Наша команда</h2>
 					<ul class="team-list">
 						<li class="person item">
+							<img class="photo" src="./img/our-teams/Igor.jpg" alt="Игорь Демьяненко" width="270" height="260" />
 							<div class="person-card">
-								<img class="photo" src="./img/our-teams/Igor.jpg" alt="Игорь Демьяненко" width="270" height="260" />
 								<h3 class="name">Игорь Демьяненко</h3>
 								<p class="text" lang="en">Product Designer</p>
-							</div>
-							<div class="team-icon">
 								<ul class="list">
 									<li class="team-icon item">
 										<a
@@ -214,12 +212,10 @@
 							</div>
 						</li>
 						<li class="person item">
+							<img class="photo" src="./img/our-teams/Olha.jpg" alt="Ольга Репина" width="270" height="260" />
 							<div class="person-card">
-								<img class="photo" src="./img/our-teams/Olha.jpg" alt="Ольга Репина" width="270" height="260" />
 								<h3 class="name">Ольга Репина</h3>
 								<p class="text" lang="en">Frontend Developer</p>
-							</div>
-							<div class="team-icon">
 								<ul class="list">
 									<li class="team-icon item">
 										<a
@@ -281,12 +277,10 @@
 							</div>
 						</li>
 						<li class="person item">
+							<img class="photo" src="./img/our-teams/Nikolay.jpg" alt="Николай Тарасов" width="270" height="260" />
 							<div class="person-card">
-								<img class="photo" src="./img/our-teams/Nikolay.jpg" alt="Николай Тарасов" width="270" height="260" />
 								<h3 class="name">Николай Тарасов</h3>
 								<p class="text" lang="en">Marketing</p>
-							</div>
-							<div class="team-icon">
 								<ul class="list">
 									<li class="team-icon item">
 										<a
@@ -348,12 +342,10 @@
 							</div>
 						</li>
 						<li class="person item">
+							<img class="photo" src="./img/our-teams/Miha.jpg" alt="Михаил Ермаков" width="270" height="260" />
 							<div class="person-card">
-								<img class="photo" src="./img/our-teams/Miha.jpg" alt="Михаил Ермаков" width="270" height="260" />
 								<h3 class="name">Михаил Ермаков</h3>
 								<p class="text" lang="en">UI Designer</p>
-							</div>
-							<div class="team-icon">
 								<ul class="list">
 									<li class="team-icon item">
 										<a
@@ -476,7 +468,7 @@
 						<span class="studio">Studio</span>
 					</a>
 					<address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-					<ul class="list">
+					<ul class="footer-contacts list">
 						<li class="item"><a class="link" href="mailto:info@example.com">info@example.com</a></li>
 						<li class="item"><a class="link" href="tel:+380991111111">+38 (099) 111 11 11</a></li>
 					</ul>
